<resources>
    <string name="app_name">USE IT</string>
    <string name="title_food_detail">food Detail</string>
    <string name="food_input">Food Name: </string>
    <string name="food_date">Exp Date (MM/dd/yy): </string>
    <string name="food_unit">Unit: </string>
    <string name="food_quantity">Quantity: </string>
    <string name="text_recipe">Recipes</string>
    <string name="text_add">Add</string>
    <string name="text_home">Home</string>
    <string name="expiring_foods"><u>Expiring Foods</u></string>
</resources>
